--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -4034,7 +4034,8 @@ BlackMarket.UpdatePeriod = 24
 #                         Example:  536870912 (512 mb)
 #
 
-Appender.Console=1,3,0
+#Appender.Console=1,3,0 #org
+Appender.Console=1,3,1,"1 9 3 6 5 8"
 Appender.Server=2,2,0,Server.log,w
 Appender.GM=2,2,15,gm/gm_%s.log
 Appender.DBErrors=2,2,0,DBErrors.log
