根据控制台提示增补配置

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -4273,3 +4273,6 @@ Metric.OverallStatusInterval = 1
 
 #
 ###################################################################################################
+
+# Add from console promot
+Azerite.Knowledge.Level = 1
