--- a/src/server/bnetserver/bnetserver.conf.dist
+++ b/src/server/bnetserver/bnetserver.conf.dist
@@ -372,7 +372,7 @@ Updates.CleanDeadRefMaxCount = 3
 #                         Example:  536870912 (512 mb)
 #
 
-Appender.Console=1,2,0
+Appender.Console=1,2,0,"1 9 3 6 5 8"
 Appender.Bnet=2,2,0,Bnet.log,w
 
 #  Logger config values: Given a logger "name"
